# python-cloudkittyclient

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cloudkittyclient/: __init__.py  auth.py  client.py  exc.py  format.py  i18n.py  osc.py  shell.py  utils.py
cloudkittyclient/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
cloudkittyclient/common/: auth.py  base.py  client.py  cliutils.py  exceptions.py  utils.py
cloudkittyclient/openstack/common/: _i18n.py  cliutils.py  gettextutils.py  importutils.py  strutils.py
cloudkittyclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
cloudkittyclient/tests/: base.py  fakes.py  test_client.py  test_cloudkittyclient.py  utils.py
cloudkittyclient/tests/common/: test_auth.py
cloudkittyclient/tests/functional/: base.py
cloudkittyclient/tests/functional/v1/: base.py  test_collector.py  test_hashmap.py  test_info.py  test_pyscripts.py  test_rating.py  test_report.py  test_storage.py
cloudkittyclient/tests/functional/v2/: test_dataframes.py  test_scope.py  test_summary.py
cloudkittyclient/tests/unit/v1/: base.py  test_collector.py  test_hashmap.py  test_info.py  test_pyscripts.py  test_rating.py  test_report.py  test_report_cli.py  test_storage.py
cloudkittyclient/tests/unit/v2/: base.py  test_dataframes.py  test_rating.py  test_scope.py  test_summary.py
cloudkittyclient/tests/v1/: test_core.py  test_hashmap.py  test_report.py
cloudkittyclient/tests/v1/billing/: test_modules.py  test_quote.py
cloudkittyclient/v1/: __init__.py  base.py  client.py  collector.py  collector_cli.py  core.py  info.py  info_cli.py  report.py  report_cli.py  shell.py  shell_cli.py  storage.py  storage_cli.py
cloudkittyclient/v1/billing/: modules.py  quote.py
cloudkittyclient/v1/billing/hashmap/: __init__.py  client.py  extension.py  shell.py
cloudkittyclient/v1/collector/: __init__.py  mapping.py  shell.py  shell_cli.py  state.py
cloudkittyclient/v1/rating/: __init__.py  hashmap.py  hashmap_cli.py  pyscripts.py  pyscripts_cli.py
cloudkittyclient/v1/rating/hashmap/: __init__.py  client.py  extension.py  shell.py  shell_cli.py
cloudkittyclient/v1/rating/pyscripts/: __init__.py  client.py  extension.py  shell.py  shell_cli.py
cloudkittyclient/v1/report/: __init__.py  shell.py  shell_cli.py
cloudkittyclient/v1/storage/: __init__.py  dataframe.py  shell.py  shell_cli.py
cloudkittyclient/v2/: client.py  dataframes.py  dataframes_cli.py  reprocessing.py  reprocessing_cli.py  scope.py  scope_cli.py  summary.py  summary_cli.py
cloudkittyclient/v2/rating/: modules.py  modules_cli.py
contrib/: python-cloudkittyclient.spec.in
doc/: makefile  requirements.txt
doc/source/: cli_reference.rst  conf.py  index.rst  installation.rst  usage.rst
doc/source/api_reference/: collector.rst  index.rst  info.rst  rating.rst  storage.rst
doc/source/api_reference/v1/: index.rst  report.rst
doc/source/api_reference/v2/: dataframes.rst  index.rst  scope.rst  summary.rst
doc/source/contributor/: contributing.rst
etc/cloudkitty/: csv_config.yml  legacy_csv_config.yml
playbooks/cloudkittyclient-devstack-functional/: pre.yaml
releasenotes/notes/: adapt-client-to-v2-api-c870d5ca49af6341.yaml  add-patch-scope-support-04c408f982d7d352.yaml  add-reprocess-api-support-dafc30d0d08a34fd.yaml  add-support-v2-dataframes-baa398fe5ea1b891.yaml  add-support-v2-dataframes-be3a17271f3c7188.yaml  add-support-v2-summary-7c1ff903f21f057b.yaml  change-default-api-version-to-v2-6d4bb5bfa234ed13.yaml  drop-py27-27ea9fb3e40d4987.yaml  fix-create_threshold-method-validation-f193e883e82214c9.yaml  fix-get-quotation-1d2c18a979f85fe6.yaml  fix-reprocessing-post-request-95512686754ee271.yaml  fix-zero-cost-mapping-7a4247cf1c6815f8.yaml  rewrite-client-5e99a6d3c7302630.yaml
releasenotes/source/: conf.py  index.rst
