[metadata]
name = python-cloudkittyclient
summary = API client of cloudkitty, Rating as a Service project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    cloudkittyclient

[entry_points]
console_scripts =
    cloudkitty = cloudkittyclient.shell:main

cloudkitty.client.modules =
    hashmap = cloudkittyclient.v1.rating.hashmap.extension:Extension
    pyscripts = cloudkittyclient.v1.rating.pyscripts.extension:Extension

openstack.cli.extension =
    rating = cloudkittyclient.osc

openstack.rating.v1 =
    rating_module-list = cloudkittyclient.v1.shell_cli:CliModuleList
    rating_module-enable = cloudkittyclient.v1.shell_cli:CliModuleEnable
    rating_module-disable = cloudkittyclient.v1.shell_cli:CliModuleDisable
    rating_module-set-priority = cloudkittyclient.v1.shell_cli:CliModuleSetPriority

    rating_info-config-get = cloudkittyclient.v1.shell_cli:CliInfoGetConfig
    rating_info-service-get = cloudkittyclient.v1.shell_cli:CliInfoGetService

    rating_total-get = cloudkittyclient.v1.report.shell_cli:CliTotalGet
    rating_summary-get = cloudkittyclient.v1.report.shell_cli:CliSummaryGet
    rating_report-tenant-list = cloudkittyclient.v1.report.shell_cli:CliReportTenantList

    rating_collector-mapping-list = cloudkittyclient.v1.collector.shell_cli:CliCollectorMappingList
    rating_collector-mapping-get = cloudkittyclient.v1.collector.shell_cli:CliCollectorMappingGet
    rating_collector-mapping-create = cloudkittyclient.v1.collector.shell_cli:CliCollectorMappingCreate
    rating_collector-mapping-delete = cloudkittyclient.v1.collector.shell_cli:CliCollectorMappingDelete
    rating_collector-state-get = cloudkittyclient.v1.collector.shell_cli:CliCollectorStateGet
    rating_collector-state-enable = cloudkittyclient.v1.collector.shell_cli:CliCollectorStateEnable
    rating_collector-state-disable = cloudkittyclient.v1.collector.shell_cli:CliCollectorStateDisable

    rating_storage-dataframe-list = cloudkittyclient.v1.storage.shell_cli:CliStorageDataframeList

    rating_hashmap-service-create = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapServiceCreate
    rating_hashmap-service-list = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapServiceList
    rating_hashmap-service-delete = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapServiceDelete
    rating_hashmap-field-create = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapFieldCreate
    rating_hashmap-field-list = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapFieldList
    rating_hashmap-field-delete = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapFieldDelete
    rating_hashmap-mapping-create = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapMappingCreate
    rating_hashmap-mapping-update = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapMappingUpdate
    rating_hashmap-mapping-list = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapMappingList
    rating_hashmap-mapping-delete = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapMappingDelete
    rating_hashmap-group-create = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapGroupCreate
    rating_hashmap-group-list = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapGroupList
    rating_hashmap-group-delete = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapGroupDelete
    rating_hashmap-threshold-create = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapThresholdCreate
    rating_hashmap-threshold-update = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapThresholdUpdate
    rating_hashmap-threshold-list = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapThresholdList
    rating_hashmap-threshold-delete = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapThresholdDelete
    rating_hashmap-threshold-get = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapThresholdGet
    rating_hashmap-threshold-group = cloudkittyclient.v1.rating.hashmap.shell_cli:CliHashmapThresholdGroup

    rating_pyscripts-script-create = cloudkittyclient.v1.rating.pyscripts.shell_cli:CliPyScriptCreate
    rating_pyscripts-script-list = cloudkittyclient.v1.rating.pyscripts.shell_cli:CliPyScriptList
    rating_pyscripts-script-get = cloudkittyclient.v1.rating.pyscripts.shell_cli:CliPyScriptGet
    rating_pyscripts-script-get-data = cloudkittyclient.v1.rating.pyscripts.shell_cli:CliPyScriptGetData
    rating_pyscripts-script-delete = cloudkittyclient.v1.rating.pyscripts.shell_cli:CliPyScriptDelete
    rating_pyscripts-script-update = cloudkittyclient.v1.rating.pyscripts.shell_cli:CliPyScriptUpdate

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cloudkittyclient/locale
domain = python-cloudkittyclient

[update_catalog]
domain = python-cloudkittyclient
output_dir = cloudkittyclient/locale
input_file = cloudkittyclient/locale/python-cloudkittyclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cloudkittyclient/locale/python-cloudkittyclient.pot
