[metadata]
name = python-cloudkittyclient
summary = API client of cloudkitty, Rating as a Service project.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    cloudkittyclient

[entry_points]
console_scripts =
    cloudkitty = cloudkittyclient.shell:main

openstack.cli.extension =
    rating = cloudkittyclient.osc

openstack.rating.v1 =
    rating_total_get = cloudkittyclient.v1.report_cli:CliTotalGet
    rating_summary_get = cloudkittyclient.v1.report_cli:CliSummaryGet
    rating_report_tenant_list = cloudkittyclient.v1.report_cli:CliTenantList

    rating_module_get = cloudkittyclient.v1.rating:CliModuleGet
    rating_module_list = cloudkittyclient.v1.rating:CliModuleList
    rating_module_enable = cloudkittyclient.v1.rating:CliModuleEnable
    rating_module_disable = cloudkittyclient.v1.rating:CliModuleDisable
    rating_module_set_priority = cloudkittyclient.v1.rating:CliModuleSetPriority

    rating_info_config_get = cloudkittyclient.v1.info_cli:CliInfoConfigGet
    rating_info_metric_get = cloudkittyclient.v1.info_cli:CliInfoMetricGet
    rating_info_metric_list = cloudkittyclient.v1.info_cli:CliInfoMetricList

    rating_hashmap_mapping-types_list = cloudkittyclient.v1.rating.hashmap_cli:CliGetMappingTypes
    rating_hashmap_service_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetService
    rating_hashmap_service_list = cloudkittyclient.v1.rating.hashmap_cli:CliListService
    rating_hashmap_service_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateService
    rating_hashmap_service_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteService
    rating_hashmap_field_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetField
    rating_hashmap_field_list = cloudkittyclient.v1.rating.hashmap_cli:CliListField
    rating_hashmap_field_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateField
    rating_hashmap_field_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteField
    rating_hashmap_mapping_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetMapping
    rating_hashmap_mapping_list = cloudkittyclient.v1.rating.hashmap_cli:CliListMapping
    rating_hashmap_mapping_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateMapping
    rating_hashmap_mapping_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteMapping
    rating_hashmap_mapping_update = cloudkittyclient.v1.rating.hashmap_cli:CliUpdateMapping
    rating_hashmap_group_list = cloudkittyclient.v1.rating.hashmap_cli:CliListGroup
    rating_hashmap_group_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateGroup
    rating_hashmap_group_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteGroup
    rating_hashmap_group_mappings_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetGroupMappings
    rating_hashmap_group_thresholds_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetGroupThresholds
    rating_hashmap_threshold_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetThreshold
    rating_hashmap_threshold_list = cloudkittyclient.v1.rating.hashmap_cli:CliListThreshold
    rating_hashmap_threshold_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateThreshold
    rating_hashmap_threshold_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteThreshold
    rating_hashmap_threshold_update = cloudkittyclient.v1.rating.hashmap_cli:CliUpdateThreshold

    rating_collector-mapping_get = cloudkittyclient.v1.collector_cli:CliCollectorMappingGet
    rating_collector-mapping_list = cloudkittyclient.v1.collector_cli:CliCollectorMappingList
    rating_collector-mapping_create = cloudkittyclient.v1.collector_cli:CliCollectorMappingCreate
    rating_collector-mapping_delete = cloudkittyclient.v1.collector_cli:CliCollectorMappingDelete
    rating_collector_state_get = cloudkittyclient.v1.collector_cli:CliCollectorGetState
    rating_collector_enable = cloudkittyclient.v1.collector_cli:CliCollectorEnable
    rating_collector_disable = cloudkittyclient.v1.collector_cli:CliCollectorDisable
    rating_dataframes_get = cloudkittyclient.v1.storage_cli:CliGetDataframes

    rating_pyscript_create = cloudkittyclient.v1.rating.pyscripts_cli:CliCreateScript
    rating_pyscript_list = cloudkittyclient.v1.rating.pyscripts_cli:CliListScripts
    rating_pyscript_get = cloudkittyclient.v1.rating.pyscripts_cli:CliGetScript
    rating_pyscript_update = cloudkittyclient.v1.rating.pyscripts_cli:CliUpdateScript
    rating_pyscript_delete = cloudkittyclient.v1.rating.pyscripts_cli:CliDeleteScript


cloudkittyclient =
    total_get = cloudkittyclient.v1.report_cli:CliTotalGet
    summary_get = cloudkittyclient.v1.report_cli:CliSummaryGet
    report_tenant_list = cloudkittyclient.v1.report_cli:CliTenantList

    module_get = cloudkittyclient.v1.rating:CliModuleGet
    module_list = cloudkittyclient.v1.rating:CliModuleList
    module_enable = cloudkittyclient.v1.rating:CliModuleEnable
    module_disable = cloudkittyclient.v1.rating:CliModuleDisable
    module_set_priority = cloudkittyclient.v1.rating:CliModuleSetPriority

    info_config_get = cloudkittyclient.v1.info_cli:CliInfoConfigGet
    info_metric_get = cloudkittyclient.v1.info_cli:CliInfoMetricGet
    info_metric_list = cloudkittyclient.v1.info_cli:CliInfoMetricList

    hashmap_mapping-types_list = cloudkittyclient.v1.rating.hashmap_cli:CliGetMappingTypes
    hashmap_service_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetService
    hashmap_service_list = cloudkittyclient.v1.rating.hashmap_cli:CliListService
    hashmap_service_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateService
    hashmap_service_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteService
    hashmap_field_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetField
    hashmap_field_list = cloudkittyclient.v1.rating.hashmap_cli:CliListField
    hashmap_field_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateField
    hashmap_field_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteField
    hashmap_mapping_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetMapping
    hashmap_mapping_list = cloudkittyclient.v1.rating.hashmap_cli:CliListMapping
    hashmap_mapping_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateMapping
    hashmap_mapping_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteMapping
    hashmap_mapping_update = cloudkittyclient.v1.rating.hashmap_cli:CliUpdateMapping
    hashmap_group_list = cloudkittyclient.v1.rating.hashmap_cli:CliListGroup
    hashmap_group_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateGroup
    hashmap_group_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteGroup
    hashmap_group_mappings_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetGroupMappings
    hashmap_group_thresholds_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetGroupThresholds
    hashmap_threshold_get = cloudkittyclient.v1.rating.hashmap_cli:CliGetThreshold
    hashmap_threshold_list = cloudkittyclient.v1.rating.hashmap_cli:CliListThreshold
    hashmap_threshold_create = cloudkittyclient.v1.rating.hashmap_cli:CliCreateThreshold
    hashmap_threshold_delete = cloudkittyclient.v1.rating.hashmap_cli:CliDeleteThreshold
    hashmap_threshold_update = cloudkittyclient.v1.rating.hashmap_cli:CliUpdateThreshold

    collector-mapping_get = cloudkittyclient.v1.collector_cli:CliCollectorMappingGet
    collector-mapping_list = cloudkittyclient.v1.collector_cli:CliCollectorMappingList

    collector-mapping_create = cloudkittyclient.v1.collector_cli:CliCollectorMappingCreate
    collector-mapping_delete = cloudkittyclient.v1.collector_cli:CliCollectorMappingDelete
    collector_state_get = cloudkittyclient.v1.collector_cli:CliCollectorGetState
    collector_enable = cloudkittyclient.v1.collector_cli:CliCollectorEnable
    collector_disable = cloudkittyclient.v1.collector_cli:CliCollectorDisable
    dataframes_get = cloudkittyclient.v1.storage_cli:CliGetDataframes

    pyscript_create = cloudkittyclient.v1.rating.pyscripts_cli:CliCreateScript
    pyscript_list = cloudkittyclient.v1.rating.pyscripts_cli:CliListScripts
    pyscript_get = cloudkittyclient.v1.rating.pyscripts_cli:CliGetScript
    pyscript_update = cloudkittyclient.v1.rating.pyscripts_cli:CliUpdateScript
    pyscript_delete = cloudkittyclient.v1.rating.pyscripts_cli:CliDeleteScript

keystoneauth1.plugin =
    cloudkitty-noauth = cloudkittyclient.auth:CloudKittyNoAuthLoader

cliff.formatter.list =
    df-to-csv = cloudkittyclient.format:DataframeToCsvFormatter

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cloudkittyclient/locale
domain = python-cloudkittyclient

[update_catalog]
domain = python-cloudkittyclient
output_dir = cloudkittyclient/locale
input_file = cloudkittyclient/locale/python-cloudkittyclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cloudkittyclient/locale/python-cloudkittyclient.pot
